--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,7 @@ plugins {
 */
 version = "1.0"
 group= "com.biggestnerd.civradar" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "${minecraft.version}-CivRadar"
+archivesBaseName = "1.9-CivRadar"
 
 
 minecraft {
