--- a/gradle.properties
+++ b/gradle.properties
@@ -1,11 +1,11 @@
 version_major=1
 version_minor=7
 version_micro=6
-version_minecraft=1.8
-version_forge=11.14.1.1404
-version_minforge=11.14.1.1505
+version_minecraft=1.9
+version_forge=12.16.1.1891
+version_minforge=12.16.1.1891
 version_mappings=stable_16
 
 extra_modsio_id=1008
 extra_curseforge_id=225603
-extra_fmlat=schematica_at.cfg
+extra_fmlat=civradar_at.cfg
