--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,9 @@ plugins {
     id "net.minecraftforge.gradle.forge" version "2.0.2"
 }
 */
-version = "1.1"
+version = "1.1.0"
 group= "com.biggestnerd.civradar" // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = "[1.10.2]CivRadar"
+archivesBaseName = "1.10.2-CivRadarLite"
 
 minecraft {
     version = "1.10.2-12.18.1.2014"
